# Cartera

./: .coverage  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  cartera.ipynb  pyproject.toml  requirements.txt  server.py
docs/: README.md  accessibility-contrast-audit.md  asset-taxonomy.md  auditoria-roadmap.md  ayuda-usuario.txt  baseline-actual.md  bond-pre-scoring-context.md  bonistas-reference.md  bonistas-roadmap.md  browser-support.md  claude-followups.md  improvement-roadmap.md  instrument-onboarding-checklist.md  notebook-feature-traceability.md  prediction-engine-history.md  prediction-engine-roadmap.md  product-roadmap.md  refactor-roadmap.md  repo-cleanup-map.md  report-ia-architecture.md  report-mobile-responsive-checklist.md  report-ui-embellecimiento-plan.md  report-ui-ready-checklist.md  report-ux-architecture.md  strategy-hardcode-inventory.md  strategy-hardcode-roadmap.md  tester-guide.md
reports/: real-report.html  smoke-report.html  styles.css
scripts/: audit_byma_mapping_coverage.py  bootstrap_example_config.py  build_byma_finviz_candidates.py  build_dist.ps1  common_local_app.ps1  export_for_ai.py  extract_byma_cedears_pdf.py  generate_real_report.py  generate_real_report_bonistas.py  generate_real_report_cli.py  generate_real_report_runtime.py  generate_real_report_snapshots.py  generate_smoke_report.py  release.ps1  report_assets.py  report_composer.py  report_decision.py  report_document.py  report_layout.py  report_layout_main.py  report_layout_sections.py  report_meta.py  report_operations.py  (+23 more)
(+161 files in other folders)
