[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cartera-de-activos"
version = "0.1.0"
description = "Motor de analisis de cartera para IOL con scoring, sizing y reporte HTML."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.26,<2",
  "pandas>=2.1,<3",
  "pypdf>=6.0,<7",
  "requests>=2.31,<3",
  "yfinance>=0.2.54,<1",
  "finvizfinance>=1.2.0,<2",
  "fredapi>=0.5.2,<1",
  "PyOBD>=0.3.0,<1",
  "openpyxl>=3.1,<4",
  "lxml>=5,<6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
